# rusty-birds

./: Cargo.toml  README.md
src/: main.rs
src/flappy/: bird.rs  game.rs  mod.rs  pipe.rs
src/matrix/: mod.rs
src/nn/: mod.rs
src/renderer/: mod.rs
