[package]
name = "rusty-birds"
version = "0.1.0"
authors = ["Juan Pablo <pablo@cruzf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["bundled", "static-link", "ttf"]

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
reduce = "0.1.3"